Fixed text alignment...

--- a/src/components/degreeCard/DegreeCard.css
+++ b/src/components/degreeCard/DegreeCard.css
@@ -68,6 +68,7 @@
 .content-list {
   padding-left: 10px;
   padding-right: 10px;
+  text-align: justify;
   font-family: "Google Sans Regular";
 }
 
@@ -88,7 +89,6 @@
   padding: 10px;
   border-radius: 7px;
   border: 0px;
-  float: right;
 }
 
 .visit-btn:hover {
