--- a/src/components/githubRepoCard/GithubRepoCard.css
+++ b/src/components/githubRepoCard/GithubRepoCard.css
@@ -68,12 +68,20 @@
 
 .repo-description {
   overflow: hidden;
-  text-align: left;
   display: -webkit-box;
+  margin-top: 0.8rem;
+  text-align: left;
   font-family: "Google Sans Regular";
   -webkit-line-clamp: 2;
-  line-clamp: 2;
   -webkit-box-orient: vertical;
+  line-clamp: 2;
+}
+
+.exp-description {
+  overflow: hidden;
+  display: -webkit-box;
+  font-family: "Google Sans Regular";
+  text-align: justify;
   margin-top: 0.8rem;
 }
 
