--- a/src/containers/greeting/Greeting.css
+++ b/src/containers/greeting/Greeting.css
@@ -47,6 +47,7 @@
   font-size: 40px;
   line-height: 40px;
   margin-right: 40px;
+  text-align: justify;
   font-family: "Google Sans Medium";
 }
 
